fixed a missing color for themes

--- a/packages/augur-ui/src/modules/market-cards/common.styles.less
+++ b/packages/augur-ui/src/modules/market-cards/common.styles.less
@@ -199,6 +199,13 @@
 	}
 }
 
+:root[theme="BETTING"],
+:root[theme="SPORTS"] {
+	.Percent {
+		background: var(--color-dark-grey);
+	}
+}
+
 .ScalarOutcome {
 	background: var(--color-secondary-action);
 	border: 1px solid var(--color-secondary-action-outline);
